--- a/html/carrito.html
+++ b/html/carrito.html
@@ -28,19 +28,19 @@
     </nav>
 
     <main>
-        <section id="carrito-contenido">
+        <section class="carrito">
             <h2>Productos de tu carrito</h2>
-            <div id="lista-carrito">
+            <div class="carrito__lista">
                 <!-- los productos añadidos al carrito se mostrarán aquí -->
             </div>
             
-            <div id="acciones-carrito">
+            <div class="carrito__pedir">
                 <label for="correo">Correo electrónico:</label>
                 <input type="email" id="correo" placeholder="Introduce tu correo" required><br>
 
                 <label for="codigo">Código de seguridad:</label>
                 <span id="codigo"></span>
-                <input type="text" id="codigo-input" placeholder="Introduce el código" required><br>
+                <input type="text" id="boot" placeholder="Introduce el código" required><br>
 
                 <button id="realizarPedido" class="btn">Realizar pedido</button>
             </div>
