--- a/html/carrito.html
+++ b/html/carrito.html
@@ -48,5 +48,64 @@
         
         <script src="../js/carrito.js"></script>
     </main>
+
+    <footer class="footer">
+        <div class="footer__container">
+            <div class="footer__column">
+                <h3>SOBRE NOSOTROS</h3>
+                <ul>
+                    <li><a href="#">Quiénes Somos</a></li>
+                    <li><a href="#">Blogger de Moda</a></li>
+                    <li><a href="#">Responsabilidad Social</a></li>
+                    <li><a href="#">Empleo</a></li>
+                    <li><a href="#">Afiliaciones</a></li>
+                </ul>
+            </div>
+            <div class="footer__column">
+                <h3>AYUDA & APOYO</h3>
+                <ul>
+                    <li><a href="#">Información de Envío</a></li>
+                    <li><a href="#">Devolución</a></li>
+                    <li><a href="#">Reembolso</a></li>
+                    <li><a href="#">Preguntas Frecuentes</a></li>
+                </ul>
+            </div>
+            <div class="footer__column">
+                <h3>SERVICIO AL CLIENTE</h3>
+                <ul>
+                    <li><a href="#">Contáctanos</a></li>
+                    <li><a href="#">Pagos & Impuestos</a></li>
+                    <li><a href="#">Puntos</a></li>
+                </ul>
+            </div>
+            <div class="footer__social">
+                <h3>ENCUÉNTRANOS EN</h3>
+                <div class="footer__icons">
+                    <a href="#"><img src="../css/images/facebook.webp" alt="Facebook"></a>
+                    <a href="#"><img src="../css/images/ig.webp" alt="Instagram"></a>
+                    <a href="#"><img src="../css/images/twitter.webp" alt="Twitter"></a>
+                    <a href="#"><img src="../css/images/yt.webp" alt="YouTube"></a>
+                </div>
+                <h3>ACEPTAMOS PAGOS CON:</h3>
+                <div class="footer__pagos">
+                    <div><img src="../css/images/paypal.webp" alt="PayPal"></div>
+                    <div><img src="../css/images/mastercard.webp" alt="Mastercard"></div>
+                    <div><img src="../css/images/applepay.webp" alt="Apple Pay"></div>
+                    <div><img src="../css/images/aex.webp" alt="American Express"></div>
+                    <div><img src="../css/images/visa.webp" alt="Visa"></div>
+                    <div><img src="../css/images/googlepay.webp" alt="Google Pay"></div>
+                </div>
+            </div>
+        </div>
+        <div class="footer__bottom">
+            <p>©2025 NEIKAP Todos los derechos reservados</p>
+            <div class="footer__links">
+                <a href="#">Política de Privacidad</a> | 
+                <a href="#">Términos y Condiciones</a> | 
+                <a href="#">Gestión de Cookies</a>
+            </div>
+        </div>
+    </footer>
+    
 </body>
 </html>
