css login mejorado

--- a/html/login.html
+++ b/html/login.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <main>
+        <a href="#" id="loggo"><img id="logo" src="logo.png" alt="logo"></a>
         <h1> Log in! </h1>
         <form id="form">
             <div>
