--- a/html/carrito.html
+++ b/html/carrito.html
@@ -18,10 +18,10 @@
 <body>
     <nav>
         <section class="navegador">
-            <a href="index.html"><img id="logo" src="logo.png" alt="logo"></a>
+            <a href="../index.html"><img id="logo" src="logo.png" alt="logo"></a>
             <h1> NEIKAP </h1>
             <div class="navegador__links">
-                <a href="index.html">Inicio</a>
+                <a href="../index.html">Inicio</a>
                 <a href="login.html" id="cerrarSesion">Cerrar sesión</a>
             </div>
         </section>
