./ en enlaces del index.html

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <nav>
         <section class="navegador">
-            <a href="#"><img id="logo" src="html/logo.png" alt="logo"></a>
+            <a href="#"><img id="logo" src="./html/logo.png" alt="logo"></a>
             <h1> NEIKAP </h1>
             <div class="navegador__links">
-                <a href="html/carrito.html" id="carrito">
+                <a href="./html/carrito.html" id="carrito">
                     <img src="https://cdn-icons-png.flaticon.com/512/1170/1170678.png" alt="carrito" style="width: 25px; height: 25px; vertical-align: middle;">
                     <span id="contador-carrito">0</span>
                 </a>
                 <a href="#">Inicio</a>
-                <a href="html/login.html" id="cerrarSesion">Cerrar sesión</a>
+                <a href="./html/login.html" id="cerrarSesion">Cerrar sesión</a>
             </div>
         </section>
     </nav>
